[package]
name = "pt02-llm-cozodb-to-context-writer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies (L1)
parseltongue-core = { path = "../parseltongue-core" }
cozo.workspace = true  # For CozoDB adapter

# Error handling (S01 principle #6)
anyhow.workspace = true        # For application errors (main.rs)
thiserror.workspace = true     # For library errors (errors.rs)

# Serialization (L2)
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Async runtime (L2)
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true

# Time handling (L2)
chrono = { workspace = true, features = ["serde"] }

# CLI dependencies (L3)
clap = { workspace = true, features = ["derive"] }
console.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true

[lib]
name = "pt02_llm_cozodb_to_context_writer"
path = "src/lib.rs"
