[package]
name = "pt08-semantic-atom-cluster-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# L1 Core - error handling
thiserror = "1.0"

# L2 Standard - collections and iteration
itertools = "0.13"
fnv = "1.0"

# L3 External - graph algorithms
petgraph = "0.6"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Internal dependencies
parseltongue-core = { path = "../parseltongue-core" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
